--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -19,6 +19,7 @@ analyzation ,/n./@分析;
 anarchistic ,/adj./@無政府主義的;
 anticipated ,/adj./@预期的;
 apocalyptic ,/adj./@預言的;
+apologetics ,/n./@護教學;,/n./@辯惑學;
 application ,/n./@申请;,/n./@應用;
 appointment ,/n./@约会;
 appreciable ,/adj./@可感知的;
@@ -36,6 +37,7 @@ avoirdupois ,/n./@常衡;
 awkwardness ,/n./@笨拙;,/n./@別扭;,/n./@尴尬;,/n./@爲難;,/n./@難為情;,/n./@難堪;,/n./@棘手;
 bellybutton ,/n./@肚脐;
 benediction ,/n./@祝福;
+benevolence ,/n./@仁慈;,/n./@善舉;,/n./@善意;,/n./@恩惠;,/n./@捐贈;
 biometrical ,/redirected./@target="biometric";
 blockbuster ,/n./@轰动;,/n./@一鸣惊人者;
 blogosphere ,/n./@博客圈;
@@ -124,6 +126,7 @@ counterfeit ,/v./@伪造;
 countermand ,/v./@取消;
 counterpart ,/n./@相当的物;
 credibility ,/n./@可信性;,/n./@真实性;,/n./@可靠性;
+criminality ,/n./@犯罪;,/n./@犯罪行為;
 cultivation ,/n./@培养;,/n./@耕作;
 cybernetics ,/n./@控制論;,/n./@神經機械學;,/n./@控制學;
 cylindrical ,/adj./@圓柱形的;
@@ -183,6 +186,7 @@ expenditure ,/n./@经费;
 explanation ,/n./@解释;
 exterminate ,/v./@消滅;,/v./@根除;,/vt./@滅絕;
 extradition ,/n./@引渡;,/n./@归国;
+extrapolate ,/vt./@推斷;,/vt./@外推;
 extravagant ,/adj./@奢侈的;
 fabrication ,/n./@製作;,/n./@虛構;
 fascinating ,/adj./@迷人的;
@@ -210,6 +214,7 @@ grandmother ,/n./@祖母;,/n./@外祖母;
 granularity ,/n./@間隔尺寸;,/n./@粒度;
 grasshopper ,/n./@蚱蜢;
 haemoglobin ,/n./@血紅蛋白;
+haemophilia ,/n./@血友病;
 haemorrhage ,/redirected./@target="hemorrhage";
 handicapped ,/adj./@有殘疾的;
 haughtiness ,/n./@傲慢;
@@ -227,6 +232,7 @@ hypothesize ,/v./@假设;
 icosahedron ,/n./@二十面體;
 illuminatus ,/n./@光照派教徒;
 imagination ,/n./@想象;,/n./@想象力;
+immanentize ,/vt./@内化;
 immediately ,/adv./@立即地;
 immigration ,/n./@移民;
 impassivity ,/n./@冷漠;
@@ -250,6 +256,7 @@ independent ,/adj./@独立的;
 indifferent ,/adj./@漠不关心的;,/adj./@不感興趣的;,/adj./@冷淡的;
 indignation ,/n./@愤慨;
 indivisible ,/adj./@不可分割的;
+infanticide ,/n./@殺嬰罪;
 infantryman ,/n./@步兵;
 inferiority ,/n./@劣勢;
 infertility ,/n./@無生育能力;,/n./@貧瘠;,/n./@不肥沃;
@@ -284,6 +291,7 @@ intractable ,/adj./@棘手的;,/adj./@难治的;,/adj./@倔强的;,/adj./@不听
 investigate ,/v./@调查;
 Kabbalistic ,/adj./@卡巴拉學的;,/adj./@卡巴拉的;
 lacquerware ,/n./@漆器;
+libertarian ,/n./@自由論者;,/n./@自由主義者;
 linguistics ,/n./@語言學;
 luminescent ,/adj./@發冷光的;,/adj./@冷光的;
 magnificent ,/adj./@极好的;,/adj./@壮丽的;
@@ -362,6 +370,7 @@ postulation ,/n./@假定;,/n./@假設;
 precipitant ,/n./@促發者;,/n./@沉澱劑;
 precipitate ,/v./@促成;,/vt./@促使;,/vi./@沉澱;
 precipitous ,/adj./@陡峭的;,/adj./@急躁的;,/adj./@險峻的;,/adj./@倉促的;,/adj./@倉卒的;,/adj./@急促的;,/adj./@猛衝的;,/adj./@魯莽的;,/adj./@驟然的;
+predecessor ,/n./@前任;,/n./@前輩;
 predictable ,/adj./@可预测的;
 predominant ,/adj./@主要的;,/adj./@卓越的;,/adj./@支配的;,/adj./@有影響的;,/adj./@有力的;
 prehistoric ,/adj./@史前的;
@@ -410,8 +419,9 @@ resemblance ,/n./@相似;
 reservation ,/n./@预约;,/n./@预订;,/n./@保留;,/n./@貯存;
 resourceful ,/adj./@机智的;
 respiration ,/n./@呼吸;,/n./@呼吸作用;
+respiratory ,/adj./@呼吸的;
 responsible ,/adj./@有责任的;
-restoration ,/n./@恢復;,/n./@復位;,/n./@復辟;
+restoration ,/n./@恢復;,/n./@復位;,/n./@復辟;,/n./@修復;,/n./@復原;
 restriction ,/n./@限制;
 retaliation ,/n./@報復;
 retribution ,/n./@报应;
@@ -443,6 +453,7 @@ stomachache ,/n./@胃痛;
 subdivision ,/n./@细分;,/n./@再分;
 subjunctive ,/n./@虛擬語氣;,/adj./@虛擬的;,/n./@虛擬形式;,/adj./@虛擬語氣的;
 subordinate ,/adj./@下属的;,/adj./@次要的;,/adj./@從屬的;,/n./@下屬;,/n./@部下;
+subservient ,/adj./@恭順的;,/adj./@從屬的;,/adj./@次要的;
 substancial ,/adj./@实体性的;
 substandard ,/adj./@不合格的;,/adj./@次等的;
 substantial ,/adj./@可觀的;
@@ -484,6 +495,7 @@ transparent ,/adj./@透明的;
 transponder ,/n./@收發機;
 treacherous ,/adj./@奸诈的;,/adj./@叛逆的;,/adj./@危险的;
 treasurable ,/adj./@值得珍爱的;
+tribulation ,/n./@苦難;,/n./@磨難;
 troublesome ,/adj./@令人煩惱的;,/adj./@討厭的;,/adj./@麻煩的;,/adj./@困難的;
 ultraphonic ,/adj./@超声的;,/n./@超声;
 ultraviolet ,/adj./@紫外的;,/adj./@紫外線的;,/n./@紫外線;,/n./@紫外光;
