--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -1,4 +1,5 @@
 abbreviation ,/n./@縮寫;
+abolitionism ,/n./@廢除主義;,/n./@廢除黑奴主義;
 academically ,/adv./@学术地;
 acceleration ,/n./@加速;,/n./@促进;
 accumulation ,/n./@积累;
@@ -9,6 +10,7 @@ advantageous ,/adj./@有利的;
 adventitious ,/adj./@外來的;,/adj./@後天的;
 agricultural ,/adj./@农业的;
 alphabetical ,/adj./@字母的;,/adj./@字母表的;,/adj./@按字母順序的;
+amalgamation ,/n./@合併;,/n./@混合;
 ambidextrous ,/adj./@两手都善用的;
 amphitheater ,/redirected./@target="amphitheatre";
 amphitheatre ,/n./@圓形劇場;,/n./@競技場;
@@ -17,6 +19,7 @@ announcement ,/n./@宣布;
 antediluvian ,/adj./@古老的;
 anthropology ,/n./@人類學;
 anticipation ,/n./@期望;,/n./@预感;
+antithetical ,/adj./@對立的;
 appendectomy ,/n./@闌尾切除手術;
 appendicitis ,/n./@闌尾炎;,/n./@盲腸炎;
 appreciation ,/n./@欣赏;
@@ -24,6 +27,7 @@ apprehension ,/n./@憂慮;
 architecture ,/n./@架构;
 asphyxiation ,/n./@窒息;
 assassinator ,/n./@刺客;
+astronomical ,/adj./@天文學的;,/adj./@天文的;,/adj./@龐大的;
 astrophysics ,/n./@天體物理學;
 asynchronous ,/adj./@异步的;,/adj./@不同时的;
 auscultation ,/n./@听诊;
@@ -67,6 +71,7 @@ constipation ,/n./@便秘;,/n./@限制;
 constitution ,/n./@憲法;,/n./@體制;
 construction ,/n./@建造;,/n./@建筑;
 consultation ,/n./@諮詢;,/n./@商議;,/n./@商討;,/n./@商討會;,/n./@會診;,/n./@參閱;
+consummation ,/n./@完婚;,/n./@圓房;,/n./@完成;
 contemporary ,/adj./@现代的;
 contemptible ,/adj./@可鄙的;
 contribution ,/n./@贡献;
@@ -103,9 +108,11 @@ enthusiastic ,/adj./@热情的;
 entreprenant ,/adj./@大胆的;,/adj./@有上进心的;
 entrepreneur ,/n./@创业者;
 epexegetical ,/adj./@附加說明性的;
+epistemology ,/n./@認識論;
 estrangement ,/n./@疏離;,/n./@疏遠;,/n./@隔閡;
 etymological ,/adj./@詞源的;,/adj./@詞源學的;
 evangelistic ,/adj./@傳福音的;,/adj./@福音傳播者的;
+evolutionist ,/n./@進化論者;,/adj./@進化的;,/adj./@進化論的;,/adj./@進化論者的;
 exaggeration ,/n./@夸大;,/n./@夸张;
 exasperation ,/n./@憤怒;,/n./@惡化;
 excruciating ,/adj./@難以忍受的;,/adj./@極痛苦的;
@@ -147,7 +154,7 @@ inflammatory ,/adj./@发炎的;
 infringement ,/n./@侵權;
 installation ,/n./@安裝;
 insufficient ,/adj./@不足的;
-insurrection ,/n./@叛乱;,/n./@起义;
+insurrection ,/n./@叛乱;,/n./@起义;,/n./@暴動;
 intellectual ,/adj./@智力的;,/adj./@智慧的;
 intelligence ,/n./@智慧;
 intelligible ,/adj./@可理解的;,/adj./@明瞭的;,/adj./@清晰易懂的;,/adj./@明白易懂的;
@@ -177,6 +184,7 @@ metamorphose ,/vt./@變形;,/vt./[Geology]@變質;
 metaphorical ,/adj./@隱喻的;,/adj./@比喻的;
 metaphysical ,/adj./@形而上学的;,/adj./@超自然的;,/adj./@玄学的;,/adj./@抽象的;
 metropolitan ,/n./@大都市;
+misogynistic ,/adj./@厭女的;,/adj./@厭惡女人的;
 misquotation ,/n./@误引;
 modification ,/n./@修正;
 monotheistic ,/adj./@一神論的;,/adj./@一神教的;
@@ -197,6 +205,7 @@ paramilitary ,/adj./@准军事的;
 participance ,/n./@参与;,/n./@分享;
 participancy ,/n./@参与;,/n./@分享;
 particularly ,/adv./@特别;
+pathological ,/adj./@病理學的;,/adj./@病理上的;,/adj./@病態的;
 penitentiary ,/n./@监狱;
 Pennsylvania ,/n./@宾夕法尼亚州;
 periodically ,/adv./@阶段性的;
@@ -208,6 +217,7 @@ plausibility ,/n./@貌似合理;,/n./@貌似可信;,/n./@可信度;
 possiblility ,/n./@可能性;
 posthumously ,/adv./@死後地;,/adv./@在死後;
 predilection ,/n./@偏好;,/n./@偏爱;,/n./@嗜好;
+preposterous ,/adj./@荒謬的;,/adj./@荒唐的;
 prerequisite ,/n./@先決條件;,/adj./@首要必備的;
 Presbyterian ,/adj./@長老會教會的;,/adj./@長老會的;,/n./@長老會教徒;
 presentation ,/n./@展示;,/n./@提供;,/n./@表演;
@@ -222,6 +232,7 @@ putrefaction ,/n./@化膿;,/n./@腐烂;,/n./@腐敗;
 quadriplegic ,/adj./@四肢瘫痪的;,/n./@四肢瘫痪者;
 quasicrystal ,/n./@準晶體;
 questionable ,/adj./@可疑的;
+radiological ,/adj./@放射學的;
 ramification ,/n./@延伸性影響;
 reassignment ,/n./@再分配;,/n./@再指派;,/n./@再指定;,/n./@重新分配;
 recognizable ,/adj./@可辨認的;,/adj./@可認出的;,/adj./@可承認的;
@@ -257,6 +268,7 @@ surroundings ,/n./@周遭;
 surveillance ,/n./@监视;
 suspiciously ,/adv./@怀疑地;
 technologist ,/n./@技術專家;,/n./@技術人員;,/n./@工藝學家;
+testosterone ,/n./@睪酮;,/n./@睪丸酮;
 togetherness ,/n./@團結友愛;,/n./@和睦相處;,/n./@親密無間;
 totalitarian ,/adj./@極權主義的;,/n./@極權主義者;
 transcendent ,/adj./@超常的;,/adj./@傑出的;,/adj./@超然的;,/adj./@卓越的;,/adj./@超越一切的;
