--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -64,12 +64,14 @@ excommunicate ,/vt./@開除;,/vt./@開除教籍;
 extermination ,/n./@消灭;,/n./@灭绝;
 extraordinary ,/adj./@特别的;,/adj./@非凡的;
 extrapolation ,/n./@推斷;,/n./@外推;,/n./@外推法;
+fertilization ,/n./@受精;,/n./@施肥;
 globalization ,/n./@全球化;
 hallucination ,/n./@幻覺;,/n./@妄想;,/n./@錯覺;
 heterogeneous ,/adj./@多相的;,/adj./@異種的;,/adj./@不均勻的;,/adj./@由不同成分形成的;
 holoportation ,/n./@全息傳送;
 hyperactivity ,/n./@多動症;,/n./@亢奮;,/n./@過度活躍;
 hypoglycaemia ,/n./@低血醣症;
+immaterialism ,/n./@非物質主義;
 imperceptible ,/adj./@無法察覺的;,/adj./@無法感覺到的;,/adj./@極細微的;,/adj./@難以察覺的;
 inappropriate ,/adj./@不合适的;
 incarceration ,/n./@監禁;
@@ -90,6 +92,7 @@ introspection ,/n./@自省;,/n./@内省;
 intuitiveness ,/n./@直觀性;
 inventiveness ,/n./@創造力;
 investigation ,/n./@调查;
+jurisprudence ,/n./@法律學;,/n./@法律體系;
 justification ,/n./@正当性;
 magnification ,/n./@放大;,/n./@放大率;
 manifestation ,/n./@表明;,/n./@表现;,/n./@表现形式;
@@ -109,6 +112,7 @@ perfectionism ,/n./@完美主義;
 perfectionist ,/n./@完美主義者;
 perpendicular ,/n./@垂线;
 petrochemical ,/adj./@石油化學的;,/n./@石油化學製品;
+phenomenology ,/n./@現象學;,/n./@現象論;
 physiotherapy ,/n./@物理療法;
 precipitation ,/n./@沉澱;,/n./@降水;,/n./@急躁;,/n./@魯莽;
 predominantly ,/adv./@主要地;,/adv./@顯著的;
