--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -18,6 +18,7 @@ disinformation ,/n./@假資訊;,/n./@假情報;
 dysproteinosis ,/n./@蛋白質缺乏症;
 ecclesiastical ,/adj./@教會的;,/adj./@教士的;
 electrochromic ,/adj./@電致色變的;,/adj./@電致變色的;
+eschatological ,/adj./@末世論的;
 gentrification ,/n./@中产阶级化;
 hallucinogenic ,/adj./@引起幻覺的;,/adj./@迷幻藥的;
 hyperrealistic ,/adj./@超級寫實主義的;
@@ -32,6 +33,7 @@ insurmountable ,/adj./@無法克服的;,/adj./@無法逾越的;,/adj./@不能克
 interpretation ,/n./@翻譯;,/n./@解釋;,/n./@口譯;
 interpretative ,/adj./@解釋的;,/adj./@解釋性的;,/adj./@說明性的;
 interpupillary ,/adj./@瞳孔间的;
+metaphilosophy ,/n./@元哲學;
 methodological ,/adj./@方法論的;
 millenarianism ,/n./@千禧年主義;
 mountaineering ,/n./@登山;,/n./@登山運動;
@@ -44,6 +46,7 @@ photorealistic ,/adj./@逼真的;,/adj./@照相寫實主義的;
 photosynthesis ,/n./@光合作用;
 proprioception ,/n./@本體感受;
 quintessential ,/adj./@精髓的;,/adj./@精粹的;,/adj./@典型的;
+radicalization ,/n./@激進化;
 recommendation ,/n./@推荐;,/n./@建议;
 reconciliation ,/n./@和解;,/n./@调和;,/n./@调停;,/n./@和谐;,/n./@和好;,/n./@調解;,/n./@对账;
 representation ,/n./@代表;
