--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -261,6 +261,7 @@ duke ,/n./@公爵;
 dull ,/adj./@愚鈍的;
 dumb ,/adj./@啞的;,/adj./@傻的;
 dump ,/v./@傾卸;
+dupe ,/vt./@欺騙;,/vt./@詐騙;
 dusk ,/n./@黃昏;
 dust ,/n./@塵土;
 duty ,/n./@責任;
@@ -436,6 +437,7 @@ haul ,/v./@拖;,/vt./@运输;,/n./@大量;,/n./@大批;,/n./@旅程;
 have ,/v./@有;
 hawk ,/n./@鷹;,/v./@兜售;,/v./@清嗓;
 haze ,/n./@霧霾;,/n./@霾;
+hazy ,/adj./@模糊的;,/adj./@朦朧的;
 head ,/n./@頭;
 heal ,/v./@治愈;
 hear ,/v./@聽;
@@ -466,6 +468,7 @@ hold ,/v./@持;
 hole ,/n./@洞;,/n./@孔;
 holy ,/adj./@神聖的;
 home ,/n./@家;
+hone ,/vt./@磨練;,/n./@磨石;
 honk ,/vi./@鳴喇叭;,/vt./@鳴響;,/n./@雁鳴聲;,/n./@汽車喇叭聲;
 hoof ,/v./@步行;,/n./@蹄;
 hook ,/n./@鉤子;
@@ -541,6 +544,7 @@ lash ,/v./@鞭打;,/n./@鞭打;
 lass ,/n./@情人;,/n./@少女;
 last ,/adj./@最后的;
 late ,/adj./@遲@的;
+laud ,/vt./@讚美;,/n./@讚美;,/n./@讚歌;
 lava ,/n./@火山巖漿;
 lawn ,/n./@草坪;,/n./@草地;
 lazy ,/adj./@懶惰的;
@@ -774,6 +778,7 @@ pleb ,/n./@平民;,/n./@老百姓;
 plod ,/v./@辛勤工作;,/v./@沉重地走;
 plot ,/n./@詭計;,/n./@陰謀;,/n./@陷阱;,/n./@情节;,/n./@图表;,/vt./@标出;,/n./@地皮;
 plow ,/n./@犁;,/v./@耕;
+ploy ,/n./@計謀;,/n./@手段;,/n./@招術;,/n./@策略;
 plug ,/v./@插;
 plum ,/n./@李子;,/n./@梅子;,/n./@紫紅色;
 plus ,/v./@加;
