--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -293,6 +293,7 @@ chosen ,/v./@選擇;
 christ ,/n./@基督;
 chunky ,/adj./@厚實的;,/adj./@厚重的;,/adj./@粗重的;,/adj./@笨重的;
 church ,/n./@教堂;,/n./@教會;
+chyron ,/n./@滾動新聞;
 cinema ,/n./@電影院;
 cipher ,/n./@密碼;,/v./@計算;
 circle ,/n./@圓;,/n./@果;,/v./@畫圈;
@@ -449,7 +450,7 @@ devout ,/adj./@虔誠的;,/adj./@衷心的;
 dexter ,/adj./@右侧的;
 dialog ,/redirected./@target="dialogue";
 diaper ,/n./@尿布;
-diesel ,/n./@柴油機;
+diesel ,/n./@柴油機;,/n./@柴油;
 differ ,/v./@不同;
 digest ,/v./@消化;,/v./@吸收;,/n./@文摘;
 dilate ,/v./@膨脹;,/v./@擴大;,/v./@詳述;
@@ -462,10 +463,12 @@ dismal ,/adj./@淒涼的;,/adj./@憂郁的;,/adj./@失落的;
 dismay ,/v./@沮喪;
 dispel ,/vt./@驅散;,/vt./@驅逐;,/vt./@消除;
 disuse ,/v./@廢止;,/n./@廢止;
+divers ,/adj./@各種的;,/adj./@各式各樣的;,/adj./@不同種類的;,/adj./@各不相同的;
 divert ,/vt./@轉向;,/vt./@轉移;,/vt./@娛樂;
 divest ,/vt./@剝奪;,/vt./@剝除;,/vt./@賣掉;,/vt./@出售;
 divide ,/v./@拆分;
 divine ,/adj./@神聖的;
+docile ,/adj./@溫順的;,/adj./@可教的;
 doctor ,/n./@醫生;,/n./@博士;,/vt./@治療;,/vt./@修理;,/vt./@竄改;
 dollar ,/n./@美元;
 domain ,/n./@領域;,/n./@領土;
@@ -489,6 +492,7 @@ duress ,/n./@強迫;,/n./@監禁;,/n./@脅迫;
 during ,/v./@在@(...)期間;
 duster ,/n./@抹布;,/n./@防塵外衣;
 dynamo ,/n./@发电机;
+earner ,/n./@掙錢者;,/n./@收入來源;
 easier ,/adj./@更容易;
 easily ,/adv./@容易地;
 eclose ,/vi./@羽化;,/vi./@孵化;
@@ -643,6 +647,7 @@ frisky ,/adj./@活潑的;
 frugal ,/adj./@節儉的;,/adj./@樸素的;
 frumpy ,/adj./@過時的;
 fungal ,/adj./@眞菌的;
+fungus ,/n./@菌類;,/n./@真菌;
 funnel ,/n./@漏斗;,/n./@煙囪;
 furrow ,/n./@沟;,/n./@深痕;,/n./@皱纹;,/vt./@犁;
 futile ,/adj./@徒勞的;,/adj./@無用的;
@@ -674,6 +679,7 @@ glider ,/n./@滑翔機;
 glitch ,/n./@故障;,/n./@失靈;
 global ,/adj./@全球的;
 gloomy ,/adj./@黑暗的;
+gnosis ,/n./@靈知;
 goatee ,/n./@山羊胡子;
 goblet ,/n./@酒杯;,/n./@髙腳杯;
 goblin ,/n./@妖精;
@@ -724,6 +730,7 @@ heckle ,/v./@詰問;
 hectic ,/adj./@忙乱的;
 height ,/n./@髙;,/n./@髙度;
 helium ,/n./@氦;
+heptad ,/n./@七個一組;
 herald ,/n./@先驅;,/n./@先兆;,/vt./@宣告;,/n./@傳令官;,/n./@使者;
 here's ,/n.v./@這是;
 hereby ,/adv./@以此;
@@ -753,6 +760,7 @@ humble ,/adj./@謙卑的;
 humour ,/n./@幽默;,/n./@詼諧;,/vt./@遷就;
 hunger ,/n./@饑餓;
 hungry ,/adj./@饑餓的;
+hurdle ,/vt./@跨過;,/n./@欄架;,/n./@跨欄賽跑;,/n./@障礙;,/n./@移動式柵欄;
 hustle ,/vt./@催促;,/vt./@推搡;,/vt./@強迫;,/n./@忙碌;,/n./@奔忙;
 hybrid ,/n./@雜種;,/adj./@混合的;,/adj./@雜交的;,/n./@合成物;,/adj./@雜種的;,/adj./@混合而成的;,/adj./@混血的;
 hyper- ,/pref./@在上;,/pref./@超過;,/pref./@過度;
@@ -766,7 +774,7 @@ impale ,/vt./@刺穿;
 impart ,/vt./@賦予;,/vt./@給予;,/vt./@傳授;,/vt./@傳達;,/vt./@透露;
 impede ,/v./@妨礙;,/v./@阻礙;
 import ,/v./@輸入;,/v./@進口;
-impose ,/v./@實施;,/v./@推行;
+impose ,/v./@實施;,/v./@推行;,/vt./@強加;
 incept ,/vt./@開始;
 incest ,/n./@亂倫;
 income ,/n./@收入;
@@ -811,7 +819,7 @@ jagger ,/n./@鑿子;,/n./@鋸齒;
 jargon ,/n./@行話;,/n./@黑話;,/n./@粗俗的言語;,/n./@混雜語;
 jigsaw ,/n./@線鋸;
 jocund ,/adj./@歡樂的;,/adj./@高興的;,/adj./@快活的;
-jostle ,/v./@推擠;
+jostle ,/v./@推擠;,/vi./@競爭;
 jovial ,/adj./@快活的;,/adj./@愉快的;,/adj./@快乐的;
 judder ,/v./@顫抖;,/n./@顫抖;
 jungle ,/n./@叢林;,/n./@密林;
@@ -949,6 +957,7 @@ modest ,/adj./@謙虛的;,/adj./@質樸的;
 modify ,/v./@修正;,/v./@修飾;
 module ,/n./@模塊;,/n./@組件;
 modulo ,/v./@求餘;,/v./@按模;,/n./@模數;
+molest ,/vt./@騷擾;,/vt./@猥褻;,/vt./@調戲;
 molten ,/adj./@熔化的;
 moment ,/n./@時刻;
 Monday ,/n./@星期一;
@@ -973,6 +982,7 @@ murder ,/v./@謀殺;
 murmur ,/v./@低聲說;
 muscle ,/n./@肌肉;
 museum ,/n./@博物館;,/n./@陳列館;
+musket ,/n./@毛瑟槍;,/n./@火槍;
 mutant ,/n./@突變體;,/adj./@突變的;
 mutate ,/v./@變化;,/v./@改變;,/v./@突變;
 mutter ,/v./@咕噥;
@@ -1005,6 +1015,7 @@ nickel ,/n./@鎳幣;
 nimble ,/adj./@敏捷的;
 nipple ,/n./@乳頭;
 nobody ,/pron./@沒有人;
+noetic ,/adj./@智力的;,/adj./@心理活動的;,/adj./@知性的;
 Nordic ,/adj./@北歐人的;,/adj./@斯堪的納維亞人的;,/adj./@斯堪的納維亞的;,/n./@北歐人;,/n./@斯堪的納維亞人;
 normal ,/adj./@正常的;
 notary ,/n./@公證人;
@@ -1062,6 +1073,7 @@ palace ,/n./@宮殿;
 palate ,/n./@味覺;
 pander ,/vi./@迎合;,/vi./@拉皮條;,/n./@皮條客;,/n./@老鴇;
 pandit ,/n./@梵學家;
+papacy ,/n./@教皇職權;
 papist ,/n./@天主教徒;
 parade ,/n./@遊行;,/vi./@遊行;,/vi./@列隊行進;
 parcel ,/v./@分配;,/n./@包裹;
@@ -1079,6 +1091,7 @@ passby ,/v./@旁路;,/v./@經過;
 pastel ,/n./@粉蠟筆;
 pastry ,/n./@酥皮糕點;
 patent ,/n./@專利;,/adj./@明顯的;
+pathos ,/n./@感染力;,/n./@感傷力;
 patrol ,/n./@巡邏;,/n./@巡邏隊;,/n./@偵察隊;,/vi./@巡逻;
 patron ,/n./@贊助人;,/n./@主顧;
 patter ,/n./@行話;,/n./@連珠砲似的話;,/n./@饒舌;,/n./@喋喋不休;,/n./@啪嗒聲;,/vi./@啪嗒啪嗒地響;,/vi./@啪嗒啪嗒地走;,/vi./@啪嗒啪嗒地拍打;
@@ -1130,6 +1143,7 @@ poison ,/n./@毒;,/n./@毒害;,/n./@毒藥;,/n./@毒物;,/vt./@毒死;,/vt./@毒
 police ,/n./@警察;
 policy ,/n./@政策;
 polish ,/v./@擦亮;,/v./@磨光;,/v./@潤色;
+polity ,/n./@政體;,/n./@國體;,/n./@政府;
 ponder ,/v./@考慮;
 poplar ,/n./@白楊;
 popper ,/n./@爆竹;,/n./@炮手;,/n./@爆玉米花機;
@@ -1158,6 +1172,7 @@ proton ,/n./@質子;
 pseudo ,/adj./@假的;,/adj./@冒充的;,/n./@偽君子;
 psyche ,/n./@靈魂;,/n./@心智;
 public ,/adj./@公開的;
+pulpit ,/n./@講道壇;,/n./@佈道壇;
 pummel ,/v./@擊打;
 pundit ,/n./@專家;,/n./@行家;,/n./@權威人士;,/n.//redirected./@target="pandit";
 punish ,/v./@懲罰;
@@ -1312,6 +1327,7 @@ sallow ,/adj./@灰黃的;
 saloon ,/n./@小轎車;,/n./@酒吧;,/n./@酒館;,/n./@包房;,/n./@雅座;,/n./@交誼廳;,/n./@活動室;,/n./@大廳;,/n./@客廳;
 sample ,/n./@樣品;
 sandal ,/n./@凉鞋;
+sanity ,/n./@精神正常;,/n./@精神健全;,/n./@清醒;,/n./@明智;,/n./@通情達理;
 satire ,/n./@諷刺;,/n./@譏諷;
 saturn ,/n./@農神;,/n./@土星;
 saucer ,/n./@茶碟;,/n./@茶托;,/n./@淺碟;
@@ -1339,6 +1355,7 @@ season ,/n./@季節;
 secede ,/v./@脫離;,/v./@退出;
 second ,/adj./@第二的;
 secret ,/n./@秘密;
+sector ,/n./@扇區;,/n./@部分;,/n./@部門;
 secure ,/adj./@安全的;
 sedate ,/adj./@安靜的;
 seduce ,/v./@誘惑;,/vt./@引诱;,/vt./@诱奸;
@@ -1502,6 +1519,7 @@ suburb ,/n./@郊區;
 subway ,/n./@地鐵;
 suffer ,/v./@遭受;
 suffix ,/n./@后綴;
+Sukkot ,/n./@住棚節;
 sulfur ,/n./@硫磺;,/n./@硫;
 sullen ,/adj./@阴沉的;,/adj./@郁郁寡欢的;,/adj./@闷闷不乐的;
 summer ,/n./@夏;
@@ -1526,7 +1544,7 @@ tactic ,/n./@策略;,/n./@戰略;
 tailor ,/v./@縫製;,/v./@調整;,/n./@裁縫;
 talent ,/n./@天賦;
 tamper ,/v./@篡改;
-tampon ,/n./@棉塞;,/n./@棉條;
+tampon ,/n./@棉塞;,/n./@棉條;,/n./@衛生棉條;,/n./@止血棉球;,/n./@止血栓;
 tandem ,/n./@串联;,/n./@串座双人自行车;
 tangle ,/v./@糾纏;
 target ,/n./@目標;,/n./@靶子;
@@ -1637,6 +1655,7 @@ urbane ,/adj./@文雅的;,/adj./@有禮貌的;,/adj./@都市化的;
 urgent ,/adj./@緊迫的;,/adj./@緊急的;
 ursine ,/adj./@熊的;,/adj./@像熊的;
 useful ,/n.//adj./@有用的;
+uterus ,/n./@子宮;
 utmost ,/adj./@極度的;,/n./@極限;
 utopia ,/n./@烏托邦;
 Utopia ,/n./@烏托邦;
@@ -1660,6 +1679,7 @@ verify ,/v./@核實;,/v./@證實;
 versus ,/prep./@對;,/prep./@對抗;
 vertex ,/n./@頂點;
 vessel ,/n./@船;,/n./@艦;,/n./@血管;,/n./@容器;
+vestal ,/adj./@處女的;,/adj./@女灶神的;
 viable ,/adj./@可行的;,/adj./@可存活的;,/adj./@可生育的;
 victim ,/n./@受害者;
 vigour ,/redirected./@target="vigor";
