--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -19,6 +19,7 @@ accurate ,/adj./@精确的;
 acoustic ,/adj./@聽覺的;,/adj./@音響的;,/adj./@聲學的;,/adj./@原声的;
 acquaint ,/v./使@认识;,/v./使@熟悉;
 activate ,/v./@刺激;,/v./@激活;
+activism ,/n./@激進主義;,/n./@行動主義;
 activity ,/n./@活动;
 actually ,/adv./@事实上;
 actuator ,/n./@執行器;
@@ -37,6 +38,7 @@ affinity ,/n./@密切;,/n./@吸引力;,/n./@喜歡;
 affluent ,/adj./@富裕的;,/adj./@丰富的;
 aggrieve ,/v./@使苦惱;
 agitator ,/n./@鼓动者;,/n./@搅拌器;
+agnostic ,/adj./@不可知論的;,/n./@不可知論者;
 agrarian ,/adj./@土地的;,/adj./@耕地的;,/adj./@农业的;,/adj./@农村的;
 airborne ,/adj./@空運的;,/adj./@空氣傳播的;,/adj./@空降的;,/adj./@飛行中的;,/adj./@在空中的;
 aircraft ,/n./@飛行器;,/n./@航空器;
@@ -126,6 +128,7 @@ autonomy ,/n./@自治;,/n./@自主;
 auxilian ,/n./@辅助人员;
 aversion ,/n./@非常討厭;
 aviation ,/n./@航空;
+axiology ,/n./@價值論;
 bachelor ,/n./@單身漢;,/n./@學士;
 backbone ,/n./@脊骨;
 backdrop ,/n./@背景幕;,/n./@背景;
@@ -291,6 +294,7 @@ couldn't ,/v./@不能;
 courtesy ,/n./@礼貌;
 covenant ,/n./@契約;
 coverage ,/n./@覆盖@范围;,/n./@新闻报道;
+covetous ,/adj./@貪求的;,/adj./@貪圖的;,/adj./@貪婪的;
 coziness ,/n./@舒適;,/n./@安逸;,/n./@愜意;
 creation ,/n./@創造;
 creative ,/adj./@创造性的;
@@ -335,10 +339,12 @@ dedicate ,/v./@獻身;,/v./@奉献;,/v./@致力;
 defeated ,/adj./@被打败的;
 defector ,/n./@叛徒;,/n./@逃兵;
 defender ,/n./@守卫者;
+defiance ,/n./@蔑視;,/n./@藐視;,/n./@違抗;,/n./@反抗;
 definite ,/adj./@清楚的;,/adj./@明确的;,/adj./@限定的;,/adj./@一定的;
 dejected ,/adj./@沮丧的;,/adj./@情绪低落的;,/adj./@垂头丧气的;
 delegate ,/n./@委派;,/n./@代表;
 delicate ,/adj./@精致的;,/adj./@微妙的;,/adj./@精美的;,/adj./@柔和的;,/adj./@纖弱的;,/adj./@優雅的;
+delirium ,/n./@精神錯亂;,/n./@極度興奮;,/n./@神志失常;
 delusion ,/n./@迷惑;,/n./@错觉;
 delusive ,/adj./@迷惑性的;
 democrat ,/n./@民主党人;
@@ -376,7 +382,7 @@ disciple ,/n./@门徒;
 disclaim ,/v./@否認;,/v./@放棄;
 disclose ,/v./@揭開;,/v./@透露;,/vt./@揭露;,/vt./@揭發;
 discorso ,/n./@演讲;
-discount ,/n./@打折;
+discount ,/n./@打折;,/vt./@打折扣;,/vt./@不全相信;
 discover ,/v./@发现;
 discreet ,/adj./@謹慎的;
 discrete ,/adj./@離散的;,/adj./@不連續的;,/n./@獨立部件;,/n./@分立元件;
@@ -472,6 +478,7 @@ equation ,/n./@等式;,/n./@方程式;
 equipage ,/n./@馬車;
 erotical ,/adj./@性愛的;,/adj./@色情的;,/adj./@好色的;
 escalate ,/v./@升級;,/v./@擴大;
+eschaton ,/n./@末世;
 esoteric ,/adj./@秘传的;,/adj./@限于圈内人的;,/adj./@深奧的;
 espresso ,/n./@濃咖啡;
 estimate ,/v./@估计;
@@ -635,12 +642,14 @@ hypnosis ,/n./@催眠狀態;
 hypnotic ,/n./@安眠藥;,/adj./@催眠的;,/adj./@安眠的;
 hysteria ,/n./@癔病;
 hysteric ,/adj./@亢奮的;
+ideation ,/n./@觀念構成;
 identify ,/v./@鉴定;,/v./@认出;,/v./@认同;
 identity ,/n./@身份;
 ideology ,/n./@意識形態;,/n./@思想意識;,/n./@觀念學;
 idolatry ,/n./@偶像崇拜;,/n./@盲目崇拜;
 ignorant ,/adj./@愚昧的;
 illusion ,/n./@幻觉;
+immanent ,/adj./@內在的;
 imminent ,/adj./@迫近的;,/adj./@临近的;,/adj./@迫在眉睫的;,/adj./@即将来临的;,/adj./@即将发生的;,/adj./@即将作出的;
 immmerse ,/n./@沉浸;
 immortal ,/adj./@不死的;,/adj./@永生的;
@@ -744,6 +753,7 @@ lividity ,/n./@鐵青色;,/n./@鉛色;
 locality ,/n./@地区;
 localize ,/v./@局部化;,/v./@地方化;
 location ,/n./@位置;
+lockdown ,/n./@封鎖;,/n./@禁閉;
 lollipop ,/n./@棒棒糖;
 lonesome ,/adj./@寂寞的;
 lopsided ,/adj./@歪的;
@@ -783,11 +793,13 @@ merkabah ,/n./@梅爾卡巴;
 metaphor ,/n./@暗喻;,/n./@隱喻;,/n./@象徵;
 metatron ,/n./@梅塔特隆;
 methanol ,/n./@甲醇;
+metonymy ,/n./@轉喻;
 midnight ,/n./@午夜;
 migraine ,/n./@偏頭痛;
+militant ,/adj./@好戰的;,/adj./@好鬥的;,/adj./@激進的;
 military ,/adj./@军事的;
 minister ,/n./@部长;,/n./@牧师;
-ministry ,/n./@內閣;,/n./@部;
+ministry ,/n./@內閣;,/n./@部;,/n./@牧師職業;,/n./@牧師職務;
 minority ,/n./@少数;
 minutiae ,/n./@小細節;,/n./@小事;
 misalign ,/n.//v./@不重合;,/n./@对偏;,/n./@位移;
@@ -833,6 +845,7 @@ nauseous ,/adj./@想嘔吐的;,/adj./@令人作嘔的;,/adj./@噁心的;,/adj./@
 nautical ,/adj./@航海的;
 navigate ,/v./@航行;,/v./@航空;
 necklace ,/n./@项链;
+negation ,/n./@對立面;,/n./@否定;
 negative ,/adj./@否定的;
 neighbor ,/n./@邻居;
 nepotism ,/n./@裙帶關係;
@@ -855,6 +868,7 @@ numerous ,/adj./@大量的;
 nutrient ,/n./@營養物;,/n./@營養成分;,/adj./@營養的;
 obedient ,/adj./@服從的;,/adj./@順從的;,/adj./@聽話的;
 obituary ,/n./@訃告;,/n./@訃聞;
+oblation ,/n./@供物;,/n./@祭品;,/n./@聖餐儀式中麵包和酒的供奉;
 oblivion ,/n./@遗忘;,/n./@湮灭;,/n./@赦免;,/n./@無意識狀態;
 observer ,/n./@觀察員;
 obsidian ,/n./@黑曜石;
@@ -870,6 +884,7 @@ oligarch ,/n./@寡頭;,/n./@寡頭執政者;
 omelette ,/n./@煎蛋;
 omission ,/n./@疏忽;,/n./@遗漏;
 oncology ,/n./@腫瘤學;
+ontology ,/n./@本體論;,/n./@實體論;
 opponent ,/n./@對手;,/n./@敵手;
 opposite ,/adj./@相反的;,/adj./@对立的;
 optician ,/n./@眼科醫生;
@@ -949,6 +964,7 @@ phonemic ,/adj./@音位的;
 phonetic ,/adj./@語音的;,/adj./@語音學的;
 physique ,/n./@體格;,/n./@體形;
 pinnacle ,/n./@山頂;,/n./@山峰;,/n./@頂峰;,/n./@頂點;,/n./@尖頂;,/n./@小尖塔;
+placenta ,/n./@胎盤;,/n./@胎座;
 platform ,/n./@平台;
 pleasant ,/adj./@令人愉快的;
 pleasure ,/n./@快乐;
@@ -958,6 +974,7 @@ polaroid ,/n./@偏光板;,/n./@偏振片;,/n./@偏光片;,/n./@偏光薄膜;
 Polaroid ,/n./@拍立得;,/n./@宝丽来;
 polished ,/adj./@擦亮的;,/adj./@抛光的;,/adj./@優美的;,/adj./@娴熟的;,/adj./@优雅的;,/adj./@精煉的;,/adj./@磨光的;,/adj./@有光澤的;,/adj./@老於世故的;,/adj./@圓滑的;
 politics ,/n./@政治;
+polygamy ,/n./@一夫多妻;,/n./@一妻多夫;
 polyglot ,/n./@精通數種語言的人;,/adj./@用數種語言的;
 polymath ,/adj./@博學的;,/n./@博學家;
 populace ,/n./@民众;,/n./@大众;,/n./@全體居民;
@@ -982,6 +999,7 @@ pressing ,/adj./@急迫的;
 pressure ,/n./@压力;
 prestige ,/n./@威望;,/n./@聲望;,/n./@名望;
 previous ,/adj./@之前的;
+prideful ,/adj./@高傲的;
 prioress ,/n./@修女院院長;,/n./@大修女院副院長;
 priority ,/n./@优先;
 pristine ,/adj./@原始的;,/adj./@古時的;,/adj./@淳樸的;
@@ -1002,6 +1020,7 @@ prophesy ,/n./@預言;
 proposal ,/n./@提议;
 prospect ,/n./@前景;,/v./@勘探;,/n./@指望;,/n./@預期;,/n./@前途;
 prostate ,/n./@前列腺;
+protista ,/n./@原生生物;
 protocol ,/n./@協議;,/n./@礼节;,/n./@条约草案;,/n./@议定书;
 prudence ,/n./@謹慎;
 punctual ,/adj./@准时的;
@@ -1122,7 +1141,7 @@ severity ,/n./@嚴重;,/n./@劇烈;,/n./@嚴厲;,/n./@嚴格;,/n./@嚴肅;,/n./@
 sextuple ,/adj./@六倍的;
 shopping ,/n./@購物;
 shortage ,/n./@不足;,/n./@缺少;
-shortcut ,/n./@捷徑;
+shortcut ,/n./@捷徑;,/n./@近路;
 shoulder ,/n./@肩;
 showcase ,/n./@陳列櫃;,/n./@展示场所;,/vt./@展示;,/vt./@展現;,/vt./@陳列;,/vt./@亮相;
 showreel ,/n./@案例演示影像;
@@ -1186,6 +1205,7 @@ strangle ,/v./@勒死;,/vt./@扼死;,/vt./@絞死;
 strategy ,/n./@战略;
 strength ,/n./@优点;
 striatum ,/redirected./@target="corpus striatum";
+strident ,/adj./@刺耳的;,/adj./@强硬的;
 striking ,/adj./@顯著的;
 stripper ,/n./@脫衣舞女;,/n./@剝離器;
 struggle ,/v.//n./@奋斗;,/v.//n./@努力;,/v.//n./@斗争;
@@ -1257,6 +1277,7 @@ together ,/adv./@一起;
 tolerant ,/adj./@宽容的;,/adj./@有忍耐性的;
 tolerate ,/v./@容忍;,/v./@忍耐;
 tomorrow ,/n./@明天;
+tortilla ,/n./@墨西哥玉米薄饼;
 tortoise ,/n./@龜;
 tortuous ,/adj./@迂迴曲折的;,/adj./@繞圈子的;,/adj./@曲折的;,/adj./@轉彎抹角的;
 traction ,/n./@牵引;,/n./@牵引力;
@@ -1306,7 +1327,9 @@ velocity ,/n./@速度;,/n./@速率;
 venerate ,/vt./@崇敬;,/vt./@敬重;
 veracity ,/n./@真實;,/n./@誠實;,/n./@真實性;
 verbatim ,/adj./@逐字的;,/adv./@逐字地;
+vertebra ,/n./@脊椎骨;
 vertical ,/adj./@垂直的;,/adj./@竖的;
+vestment ,/n./@法衣;,/n./@祭袍;,/n./@禮服;,/n./@官服;
 vibrancy ,/n./@震動;,/n./@活力;
 vicinity ,/n./@附近;,/n./@邻近;
 vigilant ,/adj./@警惕的;,/adj./@警戒的;,/adj./@警醒的;
