--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -123,6 +123,7 @@ cannonball
 capability
 capacities
 capricious
+castration
 celebrated
 censorship
 centigrade
@@ -239,9 +240,11 @@ debauchery
 decapitate
 decelerate
 declension
+defecation
 definitely
 definition
 definitive
+degenerate
 delectable
 delegation
 deliberate
@@ -258,6 +261,7 @@ depression
 derogatory
 desalinate
 descendant
+desolation
 despicable
 detectable
 deterrence
@@ -290,6 +294,7 @@ distribute
 divergence
 drivetrain
 economical
+ecumenical
 effeminate
 electronic
 elementary
@@ -297,6 +302,7 @@ embassador
 embodiment
 embroidery
 emigration
+empiricist
 employment
 enchanting
 engagement
@@ -312,6 +318,7 @@ equivocate
 ergonomics
 escalation
 especially
+eukaryotic
 evaluation
 evangelism
 evangelist
@@ -372,6 +379,7 @@ geneticist
 girlfriend
 glamourous
 Glaswegian
+Gnosticism
 government
 gramophone
 guillotine
@@ -383,6 +391,7 @@ harmonious
 helicopter
 hemisphere
 hemoglobin
+hemophilia
 hemorrhage
 hemorrhoid
 henceforth
@@ -434,6 +443,7 @@ inexorable
 infarction
 infiltrate
 infinitive
+infinitude
 inflection
 ingredient
 inhabitant
@@ -443,6 +453,7 @@ initiative
 innovation
 insistence
 inspection
+instigator
 instrument
 insurgency
 intangible
@@ -505,6 +516,7 @@ masturbate
 meaningful
 mechanical
 meditation
+megachurch
 megalithic
 melancholy
 membership
@@ -540,6 +552,7 @@ myocardial
 mysterious
 narcissism
 narcissist
+naturalism
 navigation
 neutralize
 nihilistic
@@ -558,6 +571,7 @@ octahedron
 omnificent
 omniscient
 opposition
+oppressive
 optimistic
 ornamental
 orthogonal
@@ -576,6 +590,7 @@ particular
 passionate
 peacefully
 pedestrian
+pejorative
 peninsular
 peppermint
 percentage
@@ -587,10 +602,12 @@ peripheral
 permafrost
 permanence
 permission
+pernicious
 perpetrate
 persistent
 persuasion
 perversion
+pestilence
 pharmacist
 phenomenal
 phenomenon
@@ -780,7 +797,9 @@ temptation
 tenebrific
 tetragraph
 theocratic
+theologian
 thoughtful
+threescore
 throughout
 throughput
 toothpaste
@@ -825,10 +844,12 @@ validation
 vehemently
 ventilator
 verifiable
+vernacular
 victorious
 vindictive
 visionally
 vocabulary
+vociferous
 volleyball
 volumetric
 vulnerable
@@ -841,4 +862,5 @@ widespread
 wilderness
 withdrawal
 woodpecker
+workaround
 yesteryear
