--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -19,6 +19,7 @@ analyzation
 anarchistic
 anticipated
 apocalyptic
+apologetics
 application
 appointment
 appreciable
@@ -36,6 +37,7 @@ avoirdupois
 awkwardness
 bellybutton
 benediction
+benevolence
 biometrical
 blockbuster
 blogosphere
@@ -124,6 +126,7 @@ counterfeit
 countermand
 counterpart
 credibility
+criminality
 cultivation
 cybernetics
 cylindrical
@@ -183,6 +186,7 @@ expenditure
 explanation
 exterminate
 extradition
+extrapolate
 extravagant
 fabrication
 fascinating
@@ -210,6 +214,7 @@ grandmother
 granularity
 grasshopper
 haemoglobin
+haemophilia
 haemorrhage
 handicapped
 haughtiness
@@ -227,6 +232,7 @@ hypothesize
 icosahedron
 illuminatus
 imagination
+immanentize
 immediately
 immigration
 impassivity
@@ -250,6 +256,7 @@ independent
 indifferent
 indignation
 indivisible
+infanticide
 infantryman
 inferiority
 infertility
@@ -284,6 +291,7 @@ intractable
 investigate
 Kabbalistic
 lacquerware
+libertarian
 linguistics
 luminescent
 magnificent
@@ -362,6 +370,7 @@ postulation
 precipitant
 precipitate
 precipitous
+predecessor
 predictable
 predominant
 prehistoric
@@ -410,6 +419,7 @@ resemblance
 reservation
 resourceful
 respiration
+respiratory
 responsible
 restoration
 restriction
@@ -443,6 +453,7 @@ stomachache
 subdivision
 subjunctive
 subordinate
+subservient
 substancial
 substandard
 substantial
@@ -484,6 +495,7 @@ transparent
 transponder
 treacherous
 treasurable
+tribulation
 troublesome
 ultraphonic
 ultraviolet
