--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -1,4 +1,5 @@
 abbreviation
+abolitionism
 academically
 acceleration
 accumulation
@@ -9,6 +10,7 @@ advantageous
 adventitious
 agricultural
 alphabetical
+amalgamation
 ambidextrous
 amphitheater
 amphitheatre
@@ -17,6 +19,7 @@ announcement
 antediluvian
 anthropology
 anticipation
+antithetical
 appendectomy
 appendicitis
 appreciation
@@ -24,6 +27,7 @@ apprehension
 architecture
 asphyxiation
 assassinator
+astronomical
 astrophysics
 asynchronous
 auscultation
@@ -67,6 +71,7 @@ constipation
 constitution
 construction
 consultation
+consummation
 contemporary
 contemptible
 contribution
@@ -103,9 +108,11 @@ enthusiastic
 entreprenant
 entrepreneur
 epexegetical
+epistemology
 estrangement
 etymological
 evangelistic
+evolutionist
 exaggeration
 exasperation
 excruciating
@@ -177,6 +184,7 @@ metamorphose
 metaphorical
 metaphysical
 metropolitan
+misogynistic
 misquotation
 modification
 monotheistic
@@ -197,6 +205,7 @@ paramilitary
 participance
 participancy
 particularly
+pathological
 penitentiary
 Pennsylvania
 periodically
@@ -208,6 +217,7 @@ plausibility
 possiblility
 posthumously
 predilection
+preposterous
 prerequisite
 Presbyterian
 presentation
@@ -222,6 +232,7 @@ putrefaction
 quadriplegic
 quasicrystal
 questionable
+radiological
 ramification
 reassignment
 recognizable
@@ -257,6 +268,7 @@ surroundings
 surveillance
 suspiciously
 technologist
+testosterone
 togetherness
 totalitarian
 transcendent
