--- a/Files/lang/en/english13.csv
+++ b/Files/lang/en/english13.csv
@@ -64,12 +64,14 @@ excommunicate
 extermination
 extraordinary
 extrapolation
+fertilization
 globalization
 hallucination
 heterogeneous
 holoportation
 hyperactivity
 hypoglycaemia
+immaterialism
 imperceptible
 inappropriate
 incarceration
@@ -90,6 +92,7 @@ introspection
 intuitiveness
 inventiveness
 investigation
+jurisprudence
 justification
 magnification
 manifestation
@@ -109,6 +112,7 @@ perfectionism
 perfectionist
 perpendicular
 petrochemical
+phenomenology
 physiotherapy
 precipitation
 predominantly
