--- a/Files/lang/en/english14.csv
+++ b/Files/lang/en/english14.csv
@@ -18,6 +18,7 @@ disinformation
 dysproteinosis
 ecclesiastical
 electrochromic
+eschatological
 gentrification
 hallucinogenic
 hyperrealistic
@@ -32,6 +33,7 @@ insurmountable
 interpretation
 interpretative
 interpupillary
+metaphilosophy
 methodological
 millenarianism
 mountaineering
@@ -44,6 +46,7 @@ photorealistic
 photosynthesis
 proprioception
 quintessential
+radicalization
 recommendation
 reconciliation
 representation
