--- a/Files/lang/en/english4.csv
+++ b/Files/lang/en/english4.csv
@@ -261,6 +261,7 @@ duke
 dull
 dumb
 dump
+dupe
 dusk
 dust
 duty
@@ -436,6 +437,7 @@ haul
 have
 hawk
 haze
+hazy
 head
 heal
 hear
@@ -466,6 +468,7 @@ hold
 hole
 holy
 home
+hone
 honk
 hoof
 hook
@@ -541,6 +544,7 @@ lash
 lass
 last
 late
+laud
 lava
 lawn
 lazy
@@ -774,6 +778,7 @@ pleb
 plod
 plot
 plow
+ploy
 plug
 plum
 plus
