--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -79,6 +79,7 @@ appal
 apple
 apply
 April
+apron
 ardor
 arena
 argot
@@ -86,6 +87,7 @@ argue
 armor
 aroma
 array
+arson
 aside
 askew
 asset
@@ -126,6 +128,8 @@ beast
 begin
 beige
 being
+belch
+belie
 belly
 below
 berth
@@ -208,6 +212,7 @@ cabin
 cable
 cache
 cadet
+calyx
 camel
 canal
 candy
@@ -325,6 +330,7 @@ crumb
 crush
 crust
 crypt
+cubit
 culpa
 curly
 curry
@@ -531,6 +537,7 @@ gamut
 gauge
 gaunt
 geese
+geist
 genie
 genre
 genus
@@ -550,6 +557,7 @@ glory
 glove
 glute
 glyph
+gnash
 gnome
 gonna
 goods
@@ -615,6 +623,7 @@ hence
 hepta
 hight
 hijab
+hoard
 hobby
 hoist
 hokum
@@ -838,6 +847,7 @@ odour
 offer
 often
 olive
+ology
 omni-
 onion
 onset
@@ -985,6 +995,7 @@ reach
 react
 ready
 realm
+rebar
 rebel
 rebut
 recur
@@ -1031,6 +1042,7 @@ sable
 salad
 salon
 salty
+salvo
 samen
 sauce
 savor
@@ -1305,6 +1317,7 @@ times
 timid
 tippy
 tired
+tithe
 title
 toast
 today
@@ -1333,6 +1346,7 @@ trawl
 tread
 treat
 trend
+triad
 trial
 trick
 trite
@@ -1378,6 +1392,7 @@ value
 valve
 vapid
 vault
+vegan
 venom
 verge
 versa
