--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -293,6 +293,7 @@ chosen
 christ
 chunky
 church
+chyron
 cinema
 cipher
 circle
@@ -462,10 +463,12 @@ dismal
 dismay
 dispel
 disuse
+divers
 divert
 divest
 divide
 divine
+docile
 doctor
 dollar
 domain
@@ -489,6 +492,7 @@ duress
 during
 duster
 dynamo
+earner
 easier
 easily
 eclose
@@ -643,6 +647,7 @@ frisky
 frugal
 frumpy
 fungal
+fungus
 funnel
 furrow
 futile
@@ -674,6 +679,7 @@ glider
 glitch
 global
 gloomy
+gnosis
 goatee
 goblet
 goblin
@@ -724,6 +730,7 @@ heckle
 hectic
 height
 helium
+heptad
 herald
 here's
 hereby
@@ -753,6 +760,7 @@ humble
 humour
 hunger
 hungry
+hurdle
 hustle
 hybrid
 hyper-
@@ -949,6 +957,7 @@ modest
 modify
 module
 modulo
+molest
 molten
 moment
 Monday
@@ -973,6 +982,7 @@ murder
 murmur
 muscle
 museum
+musket
 mutant
 mutate
 mutter
@@ -1005,6 +1015,7 @@ nickel
 nimble
 nipple
 nobody
+noetic
 Nordic
 normal
 notary
@@ -1062,6 +1073,7 @@ palace
 palate
 pander
 pandit
+papacy
 papist
 parade
 parcel
@@ -1079,6 +1091,7 @@ passby
 pastel
 pastry
 patent
+pathos
 patrol
 patron
 patter
@@ -1130,6 +1143,7 @@ poison
 police
 policy
 polish
+polity
 ponder
 poplar
 popper
@@ -1158,6 +1172,7 @@ proton
 pseudo
 psyche
 public
+pulpit
 pummel
 pundit
 punish
@@ -1312,6 +1327,7 @@ sallow
 saloon
 sample
 sandal
+sanity
 satire
 saturn
 saucer
@@ -1339,6 +1355,7 @@ season
 secede
 second
 secret
+sector
 secure
 sedate
 seduce
@@ -1502,6 +1519,7 @@ suburb
 subway
 suffer
 suffix
+Sukkot
 sulfur
 sullen
 summer
@@ -1637,6 +1655,7 @@ urbane
 urgent
 ursine
 useful
+uterus
 utmost
 utopia
 Utopia
@@ -1660,6 +1679,7 @@ verify
 versus
 vertex
 vessel
+vestal
 viable
 victim
 vigour
