--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -98,6 +98,7 @@ ashamed
 asphalt
 assault
 assuage
+asunder
 atheism
 athlete
 atrophy
@@ -131,6 +132,7 @@ barrack
 barrage
 barrier
 bastard
+bastion
 bathtub
 battery
 bearing
@@ -144,6 +146,7 @@ beloved
 beneath
 benefit
 bereave
+berserk
 besides
 besiege
 between
@@ -189,6 +192,7 @@ brother
 brought
 Brummie
 brutish
+bubonic
 buffalo
 buffoon
 bulimia
@@ -216,6 +220,7 @@ caracal
 caramel
 caravan
 carbine
+carcase
 carcass
 careful
 carmine
@@ -232,6 +237,7 @@ caustic
 caution
 ceiling
 celsius
+censure
 centaur
 Centaur
 central
@@ -375,6 +381,7 @@ crystal
 cubicle
 culprit
 culture
+cunning
 curious
 current
 curtail
@@ -503,6 +510,7 @@ elegant
 element
 elevate
 elision
+elitism
 elusion
 elusive
 emanate
@@ -537,6 +545,7 @@ epitaph
 epochal
 erasure
 erosion
+erotica
 erratic
 espouse
 esquire
@@ -677,6 +686,7 @@ glottal
 glottis
 glowing
 glucose
+glutton
 goddess
 godlike
 goggles
@@ -687,6 +697,7 @@ granite
 graphic
 gravity
 greater
+Grecian
 grimace
 grocery
 groupon
@@ -715,6 +726,7 @@ helpful
 hexagon
 hideous
 history
+hogwash
 holiday
 hominid
 hominin
@@ -836,6 +848,7 @@ linkage
 liquefy
 lissome
 literal
+liturgy
 lobster
 lockout
 logical
@@ -862,6 +875,7 @@ mandate
 manhole
 mankind
 mansion
+mantrap
 marital
 marquee
 massage
@@ -872,11 +886,13 @@ meander
 meaning
 measure
 mediate
+melanin
 mention
 mercury
 mermaid
 message
 methane
+metonym
 microbe
 midwife
 migrant
@@ -1045,6 +1061,7 @@ phoenix
 phoneme
 physics
 picture
+pigment
 pillage
 pillory
 pioneer
@@ -1255,6 +1272,7 @@ scholar
 sciatic
 science
 scissor
+scoffer
 scooter
 scourge
 Scouser
@@ -1355,7 +1373,9 @@ stalker
 stamina
 startle
 station
+statist
 stealth
+steeple
 stellar
 stencil
 sterile
