--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -19,6 +19,7 @@ accurate
 acoustic
 acquaint
 activate
+activism
 activity
 actually
 actuator
@@ -37,6 +38,7 @@ affinity
 affluent
 aggrieve
 agitator
+agnostic
 agrarian
 airborne
 aircraft
@@ -126,6 +128,7 @@ autonomy
 auxilian
 aversion
 aviation
+axiology
 bachelor
 backbone
 backdrop
@@ -291,6 +294,7 @@ couldn't
 courtesy
 covenant
 coverage
+covetous
 coziness
 creation
 creative
@@ -335,10 +339,12 @@ dedicate
 defeated
 defector
 defender
+defiance
 definite
 dejected
 delegate
 delicate
+delirium
 delusion
 delusive
 democrat
@@ -472,6 +478,7 @@ equation
 equipage
 erotical
 escalate
+eschaton
 esoteric
 espresso
 estimate
@@ -635,12 +642,14 @@ hypnosis
 hypnotic
 hysteria
 hysteric
+ideation
 identify
 identity
 ideology
 idolatry
 ignorant
 illusion
+immanent
 imminent
 immmerse
 immortal
@@ -744,6 +753,7 @@ lividity
 locality
 localize
 location
+lockdown
 lollipop
 lonesome
 lopsided
@@ -783,8 +793,10 @@ merkabah
 metaphor
 metatron
 methanol
+metonymy
 midnight
 migraine
+militant
 military
 minister
 ministry
@@ -833,6 +845,7 @@ nauseous
 nautical
 navigate
 necklace
+negation
 negative
 neighbor
 nepotism
@@ -855,6 +868,7 @@ numerous
 nutrient
 obedient
 obituary
+oblation
 oblivion
 observer
 obsidian
@@ -870,6 +884,7 @@ oligarch
 omelette
 omission
 oncology
+ontology
 opponent
 opposite
 optician
@@ -949,6 +964,7 @@ phonemic
 phonetic
 physique
 pinnacle
+placenta
 platform
 pleasant
 pleasure
@@ -958,6 +974,7 @@ polaroid
 Polaroid
 polished
 politics
+polygamy
 polyglot
 polymath
 populace
@@ -982,6 +999,7 @@ pressing
 pressure
 prestige
 previous
+prideful
 prioress
 priority
 pristine
@@ -1002,6 +1020,7 @@ prophesy
 proposal
 prospect
 prostate
+protista
 protocol
 prudence
 punctual
@@ -1186,6 +1205,7 @@ strangle
 strategy
 strength
 striatum
+strident
 striking
 stripper
 struggle
@@ -1257,6 +1277,7 @@ together
 tolerant
 tolerate
 tomorrow
+tortilla
 tortoise
 tortuous
 traction
@@ -1306,7 +1327,9 @@ velocity
 venerate
 veracity
 verbatim
+vertebra
 vertical
+vestment
 vibrancy
 vicinity
 vigilant
