--- a/Files/lang/en/english15.csv
+++ b/Files/lang/en/english15.csv
@@ -9,6 +9,7 @@ electrochromism
 electromagnetic
 experimentation
 familiarization
+heteronormative
 hypoproteinemia
 interchangeable
 interventionist
@@ -17,5 +18,6 @@ neoconservative
 neuroplasticity
 notwithstanding
 perspectiveness
+postcolonialism
 straightforward
 synchronization
