--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -64,6 +64,7 @@ analogous
 anarchism
 anarchist
 ancillary
+androgyne
 animation
 animosity
 annotated
@@ -93,6 +94,8 @@ arthritic
 arthritis
 artillery
 ascendant
+ascension
+Ascension
 aspersion
 assailant
 assertion
@@ -173,6 +176,7 @@ capillary
 capitulum
 Capricorn
 captivate
+captivity
 cardboard
 careerist
 carefully
@@ -185,6 +189,7 @@ catalogue
 Catalonia
 catamaran
 catatonic
+causality
 causative
 celebrate
 celebrity
@@ -227,6 +232,7 @@ colleague
 collision
 collocate
 colloquia
+collusion
 Colosseum
 commingle
 commissar
@@ -243,10 +249,12 @@ compliant
 component
 composure
 concourse
+concubine
 condiment
 condition
 conductor
 confident
+confusion
 congenial
 congruent
 congruous
@@ -324,6 +332,7 @@ dependent
 depiction
 depravity
 deprecate
+desecrate
 desertion
 designate
 desperate
@@ -339,6 +348,7 @@ developer
 dexterity
 diagnosis
 diagramma
+dialectic
 diaphragm
 dichotomy
 dictation
@@ -408,6 +418,7 @@ emergency
 emphasize
 empirical
 empitical
+enchilada
 enclosure
 encounter
 encourage
@@ -427,6 +438,7 @@ ephemeral
 epicenter
 epicentre
 epidermis
+episcopal
 equipment
 eradicate
 ergonomic
@@ -441,6 +453,7 @@ etiquette
 etymology
 Eucharist
 Euclidean
+eukaryote
 euthanize
 evaporate
 evolution
@@ -533,6 +546,7 @@ gyroscope
 halloween
 hamburger
 handiwork
+harbinger
 hashtable
 hazardous
 heartfelt
@@ -541,6 +555,7 @@ Hellenist
 Hellenize
 heterodox
 hibernate
+hierarchy
 highlight
 hilarious
 hindrance
@@ -559,6 +574,7 @@ hurricane
 hydraulic
 hyperbola
 hyperreal
+hyphenate
 hypnotize
 hypocrisy
 hypomania
@@ -569,6 +585,7 @@ illegible
 illogical
 imaginary
 imitation
+immanence
 immediate
 immersing
 immigrant
@@ -698,6 +715,7 @@ manoeuvre
 Maranatha
 margarine
 marijuana
+martyrdom
 marvelous
 masculine
 maternity
@@ -708,6 +726,7 @@ mausoleum
 meanwhile
 mechanics
 mechanism
+megaphone
 melodrama
 menstrual
 mentality
@@ -873,6 +892,7 @@ prejudice
 premature
 prescribe
 president
+preterist
 prevalent
 primitive
 principal
@@ -914,6 +934,7 @@ quotation
 radiation
 radicular
 radiogram
+radiology
 rasterize
 rationale
 realistic
@@ -938,6 +959,7 @@ refurbish
 regarding
 rehearsal
 reinforce
+reiterate
 rejection
 religious
 reluctant
@@ -980,6 +1002,7 @@ satisfied
 scapegoat
 sceptical
 schematic
+scientism
 scientist
 scoundrel
 scrapbook
@@ -1021,6 +1044,7 @@ situation
 skeptical
 slaughter
 socialite
+sociology
 solicitor
 something
 sometimes
@@ -1077,6 +1101,7 @@ tangerine
 tantalize
 taxonomic
 technique
+teleology
 telepathy
 telephone
 telephony
